# pymongowatch

./: .gitignore  LICENSE.org  README.org  deploy_test.py  docker-compose.test.yml  pymongowatch.py  pymongowatch_attributes.py  setup.cfg  tests.py
debian/: changelog  config  control  copyright  manpages  postinst  postrm  prerm  pymongowatch-csv-aggr.1  pymongowatch-csv.1  pymongowatch-install-mask.1  rules  templates
debian/patches/: default-log-file-path  series
debian/po/: templates.pot
etc/: pymongowatch.yaml
pymongo/watcher/: __init__.py  base.py  bases.py  collection.py  csv_utils.py  cursor.py  filters.py  logger.py  transforms.py
pymongo_mask/: pymongo.py
pymongowatch_mask_installer/: main.py
