[metadata]
name = pymongowatch
version = attr: pymongowatch_attributes.__version__
description = Add logging features to pymongo
long_description = file: README.rst
keywords = mongo, mongodb, pymongo, log, logging
author = Mohammad Razavi
author_email = mrazavi64@gmail.com
url = https://github.com/admirito/pymongowatch
license = GPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: System :: Logging
    Topic :: System :: Systems Administration

[options]
packages = find_namespace:
py_modules = pymongowatch_attributes
install_requires =
    pymongo
    pyyaml

[options.data_files]
etc =
    etc/pymongowatch.yaml

[options.entry_points]
console_scripts =
    pymongowatch-install-mask = pymongowatch_mask_installer.main:main
